Updated to harbuzz 7.1.0

--- a/subprojects/packagefiles/harfbuzz/meson.build
+++ b/subprojects/packagefiles/harfbuzz/meson.build
@@ -1,6 +1,5 @@
-# Modifications of HarfBuzz meson.build for Arcollect
 project('harfbuzz', 'c', 'cpp',
-  version: '5.3.0',
+  version: '7.1.0',
 )
 
 hb_version_arr = meson.project_version().split('.')
@@ -9,7 +8,7 @@ hb_version_minor = hb_version_arr[1].to_int()
 hb_version_micro = hb_version_arr[2].to_int()
 
 # libtool versioning
-hb_version_int = hb_version_major*10000 + hb_version_minor*100 + hb_version_micro
+hb_version_int = 60000 + hb_version_major*100 + hb_version_minor*10 + hb_version_micro
 hb_libtool_version_info = '@0@:0:@0@'.format(hb_version_int)
 
 pkgmod = import('pkgconfig')
@@ -22,17 +21,12 @@ if cpp.get_argument_syntax() == 'msvc'
   # If a warning is harmless but hard to fix, use '/woXXXX' so it's shown once
   # NOTE: Only add warnings here if you are sure they're spurious
   msvc_args = [
-    '/wd4018', # implicit signed/unsigned conversion
-    '/wd4146', # unary minus on unsigned (beware INT_MIN)
     '/wd4244', # lossy type conversion (e.g. double -> int)
-    '/wd4305', # truncating type conversion (e.g. double -> float)
     cpp.get_supported_arguments(['/utf-8']), # set the input encoding to utf-8
   ]
   add_project_arguments(msvc_args, language: ['c', 'cpp'])
   # Disable SAFESEH with MSVC for libs that use external deps that are built with MinGW
   # noseh_link_args = ['/SAFESEH:NO']
-  # disable exception handling
-  add_project_arguments(['/EHs-', '/EHc-'], language: 'cpp')
 endif
 
 add_project_link_arguments(cpp.get_supported_link_arguments([
@@ -78,25 +72,46 @@ check_funcs = [
 
 m_dep = cpp.find_library('m', required: false)
 
-freetype_dep = dependency('freetype2', required: get_option('freetype'))
+if meson.version().version_compare('>=0.60.0')
+  # pkg-config: freetype2, cmake: Freetype
+  freetype_dep = dependency('freetype2', 'Freetype',
+                            required: get_option('freetype'),
+                            default_options: ['harfbuzz=disabled'],
+                            allow_fallback: true)
+else
+  # painful hack to handle multiple dependencies but also respect options
+  freetype_opt = get_option('freetype')
+  # we want to handle enabled manually after fallbacks, but also handle disabled normally
+  if freetype_opt.enabled()
+    freetype_opt = false
+  endif
+  # try pkg-config name
+  freetype_dep = dependency('freetype2', method: 'pkg-config', required: freetype_opt)
+  # when disabled, leave it not-found
+  if not freetype_dep.found() and not get_option('freetype').disabled()
+    # Try cmake name
+    freetype_dep = dependency('Freetype', method: 'cmake', required: false)
+    # Subproject fallback, `allow_fallback: true` means the fallback will be
+    # tried even if the freetype option is set to `auto`.
+    if not freetype_dep.found()
+      freetype_dep = dependency('freetype2',
+                                method: 'pkg-config',
+                                required: get_option('freetype'),
+                                default_options: ['harfbuzz=disabled'],
+                                allow_fallback: true)
+    endif
+  endif
+endif
 
-glib_dep = disabler()
-gobject_dep =  disabler()
 graphite2_dep = dependency('graphite2', required: get_option('graphite2'))
+graphite_dep = dependency('graphite2', required: get_option('graphite'))
 
-# Try pkgconfig name
-icu_dep = dependency('icu-uc', required: false)
-if not icu_dep.found()
-  # Try cmake name
-  icu_dep = dependency('ICU',
-                       required: false,
-                       components: 'uc',
-                       method: 'cmake')
-endif
-if not icu_dep.found()
-  # Subproject fallback if icu option is enabled
-  icu_dep = dependency('icu-uc', required: get_option('icu'))
-endif
+# pkg-config: icu-uc, cmake: ICU but with components
+icu_dep = dependency('icu-uc', 'ICU',
+                          components: 'uc',
+                          required: get_option('icu'),
+                          default_options: ['harfbuzz=disabled'],
+                          allow_fallback: true)
 
 if icu_dep.found() and icu_dep.type_name() == 'pkgconfig'
   icu_defs = icu_dep.get_variable(pkgconfig: 'DEFS', default_value: '').split()
@@ -105,6 +120,7 @@ if icu_dep.found() and icu_dep.type_name() == 'pkgconfig'
   endif
 endif
 
+cairo_dep = null_dep
 conf = configuration_data()
 incconfig = include_directories('.')
 
@@ -252,21 +268,6 @@ endforeach
 
 subdir('src')
 
-# Strip uneeded functionalities
-conf.set('HB_DISABLE_DEPRECATED'      ,1) # Deprecation ? No thanks.
-conf.set('HB_NO_BUFFER_MESSAGE'       ,1) # Nuke hb_buffer_message_func_t
-conf.set('HB_NO_BUFFER_SERIALIZE'     ,1) # Nuke hb_buffer_serialize_glyphs
-conf.set('HB_NO_BUFFER_VERIFY'        ,1) # Nuke the unused buffer sanity check
-conf.set('HB_NO_CMAP_LEGACY_SUBTABLES',1) # Remove as much legacy as we can
-conf.set('HB_NO_DRAW'                 ,1) # We use FreeType2 to render fonts
-conf.set('HB_NO_FACE_COLLECT_UNICODES',1) # Nuke unused API
-conf.set('HB_NO_FALLBACK_SHAPE'       ,1) # Remove as much legacy as we can
-conf.set('HB_NO_MT'                   ,1) # HarfBuzz is always used in the main thread
-conf.set('HB_NO_OT_FONT'              ,1) # We always use FreeType2
-conf.set('HB_NO_OT_FONT_GLYPH_NAMES'  ,1) # We never query glyph names
-conf.set('HB_NO_OT_LAYOUT_BLOCKLIST'  ,1) # Remove as much legacy as we can
-conf.set('HB_NO_OT_SHAPE_FALLBACK'    ,1) # Remove as much legacy as we can
-conf.set('NDEBUG'                     ,1) # No debug
 configure_file(output: 'config.h', configuration: conf)
 
 build_summary = {
@@ -284,9 +285,6 @@ build_summary = {
     {'CoreText': conf.get('HAVE_CORETEXT', 0) == 1,
      'DirectWrite': conf.get('HAVE_DIRECTWRITE', 0) == 1,
      'GDI/Uniscribe': (conf.get('HAVE_GDI', 0) == 1) and (conf.get('HAVE_UNISCRIBE', 0) == 1),
-    },
-  'Other features':
-    {'Experimental APIs': conf.get('HB_EXPERIMENTAL_API', 0) == 1,
     },
 }
 foreach section_title, section : build_summary
