--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -187,9 +187,9 @@ jobs:
       - name: Install Meson
         run: pip install meson ninja
       - name: Install WiX
-        run: dotnet tool install --global wix --version 4
+        run: dotnet tool install --global wix --version 4.0.0
       - name: Install WiX extensions
-        run: wix extension add -g WixToolset.UI.wixext
+        run: wix extension add -g WixToolset.UI.wixext/4.0.0
       - name: Configure project
         run: meson build --force-fallback-for=freetype2,fmt,bzip2,giflib,libpng,Imath,inih,lcms2,libcurl,libjpeg,libtiff,OpenImageIO,robin-map,roboto,sdl2,harfbuzz,sqlite3,boost,zlib -Denable_webextension=false -Dcpp_link_args=-static -Dc_link_args=-static -Dbuildtype=release -Dstrip=true # FIXME LTO doesn't works, why?
       - name: Build desktop-app
