--- a/subprojects/libcurl/meson.build
+++ b/subprojects/libcurl/meson.build
@@ -8,7 +8,7 @@ subproj_opts.add_cmake_defines({
 	'BUILD_CURL_EXE': false,
 	'BUILD_SHARED_LIBS': false,
 	'BUILD_TESTING': false,
-	'CURL_BROTLI': true,
+	'CURL_BROTLI': false, # TODO Restore
 	'USE_LIBIDN2': false, # No supported platform use IDN currently
 	'USE_MANUAL': false, # Disable doc generation
 	'CURL_USE_LIBSSH': false,
@@ -32,7 +32,7 @@ subproj_opts.add_cmake_defines({
 	'ZLIB_ROOT': get_option('cmake_overrides_path'),
 	'Brotli_ROOT': get_option('cmake_overrides_path'),
 })
-dep_curl = []
+dep_curl = [dependency('zlib'),dependency('libbrotlidec')]
 if host_machine.system() == 'windows'
 	subproj_opts.add_cmake_defines({
 		'CURL_USE_SCHANNEL': true,
@@ -50,4 +50,4 @@ endif
 subproj_opts.set_install(false)
 subproj_curl = cmake.subproject('libcurl-cmake', options: subproj_opts)
 curl_version = cc.get_define('LIBCURL_VERSION', include_directories: subproj_curl.include_directories('libcurl_static'), prefix: '#include <curl/curl.h>').strip('"')
-meson.override_dependency('libcurl',declare_dependency(dependencies: [subproj_curl.dependency('libcurl_static'),dep_curl,dependency('zlib'),dependency('libbrotlidec')], version: curl_version))
+meson.override_dependency('libcurl',declare_dependency(dependencies: [subproj_curl.dependency('libcurl_static'),dep_curl], version: curl_version))
