--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -199,7 +199,7 @@ jobs:
       - name: Build project
         run: ninja -C build
       - name: Generate MSI
-        run: ninja -C build all-msi
+        run: ninja -C build packaging/arcollect-en_US.msi # TODO all-msi once race condition is fixed
       - name: Rename MSI
         run: Get-ChildItem | Where {$_.Name -Match '.msi$'} | Rename-Item -NewName {$_.name -replace '.msi','-${{ github.ref_name }}-x64.msi' } 
         shell: pwsh
