--- a/subprojects/packagefiles/libjpeg-turbo/meson_options.txt
+++ b/subprojects/packagefiles/libjpeg-turbo/meson_options.txt
@@ -1,1 +1,3 @@
-option('force_inline', type: 'boolean', value: true)
+option('force_inline', type: 'boolean')
+option('simd', type: 'feature')
+option('neon-intrinsics', type: 'feature')
